[gd_scene load_steps=8 format=3 uid="uid://clwk3vs0qngpi"]

[ext_resource type="Script" path="res://addons/godolibur/Cutcene/PasswordInputter/PasswordInputter.gd" id="1_lisna"]
[ext_resource type="PackedScene" uid="uid://bgvft2j6u04mi" path="res://addons/godolibur/UI/Elements/Buttons/PasswordCharacter.tscn" id="2_v85n2"]
[ext_resource type="PackedScene" uid="uid://bn5g1nrt2p8vu" path="res://addons/godolibur/UI/Elements/Window/WindowBox.tscn" id="3_7t242"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="3"]
resource_name = "hide_screen"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="1"]
resource_name = "show_screen"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6o3p"]
_data = {
"RESET": SubResource("2"),
"hide_screen": SubResource("3"),
"show_screen": SubResource("1")
}

[node name="PasswordInputter" type="Control"]
process_mode = 2
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lisna")
button = ExtResource("2_v85n2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InputBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="PasswordBox" type="MarginContainer" parent="InputBox"]
custom_minimum_size = Vector2(900, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="UI" parent="InputBox/PasswordBox" instance=ExtResource("3_7t242")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="InputBox/PasswordBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15

[node name="ButtonContainers" type="HBoxContainer" parent="InputBox/PasswordBox/Margin"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0

[node name="HSplit" type="HSplitContainer" parent="InputBox/PasswordBox/Margin/ButtonContainers"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c6o3p")
}
